fix: tree collapse component

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,8 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwind.css";
 
-
+body {
+  @apply p-0 m-0 box-border;
+}
 
 .flex-center {
   @apply flex items-center justify-center;
@@ -12,7 +12,7 @@
   @apply flex items-center;
 }
 
-.flex-center-between {
+.flex-between {
   @apply flex items-center justify-between;
 }
 
